read more/less button

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 .App {
   text-align: center;
 }
+.expend-text {
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  display: -webkit-box;
+}
